# lab05

./: Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.h  Dust.cpp  Dust.hpp  Painter.cpp  Painter.h  Physics.cpp  Physics.h  Point.h  README.md  World.cpp  World.h  main.cpp
.github/workflows/: release.yml
black_box/: Application.cpp  PainterImpl.cpp
